Fix various CSS

--- a/src/LazyIpfsImage.css
+++ b/src/LazyIpfsImage.css
@@ -1,10 +1,9 @@
 .upload__form {
   max-width: 600px;
-  min-height: 600px;
 }
 
 .upload_message {
-  width: auto;
+  overflow-wrap: break-word;
 }
 
 .upload__frame {
@@ -26,56 +25,10 @@
   transform: translate(-50%, -50%);
 }
 
+input#file_input {
+  display: none;
+}
 
-
-.btn {
-    font-family: "Rebrand Bold";
-    cursor: pointer;
-    transition: all 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
-  }
-  
-  .btn-bg {
-    background: white;
-    padding: 0.5rem 1rem;
-    mix-blend-mode: screen; /* This makes the cutout text possible */
-    color: black;
-    display: inline-block;
-  }
-  
-  .btn-bordered {
-    border: 2px solid white;
-  }
-  
-  .btn-light {
-    font-family: "Monument Bold" !important;
-  }
-  
-  .btn:hover, btn-bg:hover {
-    transform: scale(1.05);
-  }
-  
-  .btn-small {
-    font-size: .8rem;
-    text-align: left;
-  }
-  
-  .btn-dappy {
-    width: 60%;
-    margin: 0 auto;
-    display: flex; 
-    justify-content: center;
-  }
-  
-  .btn-icon {
-    font-size: 1.2rem; 
-    margin-right: .2rem
-  }
-  
-  .rounded {
-    border-radius: 150px;
-  }
-  
-  .wiggling:hover {
-    animation: tada;
-    animation-duration: 1s;
-  }
+.upload__btn {
+    margin: 1.0rem;
+}
